--- a/styles/atom-copilot.less
+++ b/styles/atom-copilot.less
@@ -4,7 +4,7 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.friend-atom{
+.atom-copilot{
 }
 .single-suggestion{
   padding: 5px;
